Drop strict forward dependency on gnome-shell
It is no longer necessary
(https://git.gnome.org/browse/gnome-shell/commit/?id=5e0e3e). Thanks
Michael Biebl.

--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Vcs-Browser: https://github.com/zedinosaur/gnome-shell-extension-redshift.git
 
 Package: gnome-shell-extension-redshift
 Architecture: all
-Depends: gnome-shell (<< 3.21), gnome-shell (>= 3.8), redshift, ${misc:Depends}
+Depends: gnome-shell (>= 3.8), redshift, ${misc:Depends}
 Recommends: geoclue-2.0, gnome-tweak-tool
 Description: redshift extension for GNOME Shell
  GNOME shell extension to control redshift, which adjusts the color
